--- a/pages/index.html
+++ b/pages/index.html
@@ -353,11 +353,11 @@
             <div class="linkbox">
                 <a href="javascript:;" class="btn-deposit">
                     <img src="../img/sidebar/deposit.svg" alt="deposit">
-                    <span>Deposit<br>request</span>
+                    <span>Deposit request</span>
                 </a>
                 <a href="javascript:;" class="btn-withdrawal">
                     <img src="../img/sidebar/withdraw.svg" alt="withdraw">
-                    <span>withdrawal<br>request</span>
+                    <span>withdrawal request</span>
                 </a>
                 <a href="./events.html">
                     <img src="../img/sidebar/events.svg" alt="events">
@@ -365,7 +365,7 @@
                 </a>
                 <a href="./announcement.html">
                     <img src="../img/sidebar/announcement.svg" alt="announcement">
-                    <span class="othersize">announcement</span>
+                    <span>announcement</span>
                 </a>
             </div>
             <div class="gamescategory">
@@ -440,19 +440,30 @@
                 <!-- contents -->
                 <div class="swiper main__visualslider">
                     <div class="swiper-wrapper">
-                        <a href="javascript:;" class="swiper-slide"><img src="../img/main/visual_banner1.jpg" alt="img" class="visual-bg"></a>
-                        <a href="javascript:;" class="swiper-slide"><img src="../img/main/visual_banner2.jpg" alt="img" class="visual-bg"></a>
-                        <a href="javascript:;" class="swiper-slide"><img src="../img/main/visual_banner3.jpg" alt="img" class="visual-bg"></a>
-                        <a href="javascript:;" class="swiper-slide showSignupPopup"><img src="../img/main/visual_banner4.jpg" alt="img" class="visual-bg"></a>
-                        <a href="javascript:;" class="swiper-slide showSignupPopup"><img src="../img/main/visual_banner5.jpg" alt="img" class="visual-bg"></a>
-                        <a href="javascript:;" class="swiper-slide"><img src="../img/main/visual_banner6.jpg" alt="img" class="visual-bg"></a>
+                        <a href="javascript:;" class="swiper-slide pc"><img src="../img/main/visual_banner1.jpg" alt="img" class="visual-bg"></a>
+                        <a href="javascript:;" class="swiper-slide pc"><img src="../img/main/visual_banner2.jpg" alt="img" class="visual-bg"></a>
+                        <a href="javascript:;" class="swiper-slide pc"><img src="../img/main/visual_banner3.jpg" alt="img" class="visual-bg"></a>
+                        <a href="javascript:;" class="swiper-slide pc showSignupPopup"><img src="../img/main/visual_banner4.jpg" alt="img" class="visual-bg"></a>
+                        <a href="javascript:;" class="swiper-slide pc showSignupPopup"><img src="../img/main/visual_banner5.jpg" alt="img" class="visual-bg"></a>
+                        <a href="javascript:;" class="swiper-slide pc"><img src="../img/main/visual_banner6.jpg" alt="img" class="visual-bg"></a>
+
+                        <a href="javascript:;" class="swiper-slide mo"><img src="../img/main/visual_banner1_mo.jpg" alt="img" class="visual-bg"></a>
+                        <a href="javascript:;" class="swiper-slide mo"><img src="../img/main/visual_banner2_mo.jpg" alt="img" class="visual-bg"></a>
+                        <a href="javascript:;" class="swiper-slide mo"><img src="../img/main/visual_banner3_mo.jpg" alt="img" class="visual-bg"></a>
+                        <a href="javascript:;" class="swiper-slide mo showSignupPopup"><img src="../img/main/visual_banner4_mo.jpg" alt="img" class="visual-bg"></a>
+                        <a href="javascript:;" class="swiper-slide mo showSignupPopup"><img src="../img/main/visual_banner5_mo.jpg" alt="img" class="visual-bg"></a>
+                        <a href="javascript:;" class="swiper-slide mo"><img src="../img/main/visual_banner6_mo.jpg" alt="img" class="visual-bg"></a>
                     </div>
                     <div class="swiper-pagination"></div>
                 </div>
                 <div class="main__games">
-                    <a href="javascript:;"><img src="../img/main/sub_banner1.png" alt="img"></a>
-                    <a href="javascript:;"><img src="../img/main/sub_banner2.png" alt="img"></a>
-                    <a href="javascript:;"><img src="../img/main/sub_banner3.png" alt="img"></a>
+                    <div class="swiper main__gamesslider">
+                        <div class="swiper-wrapper">
+                            <a class="swiper-slide" href="javascript:;"><img src="../img/main/sub_banner1.png" alt="img"></a>
+                            <a class="swiper-slide" href="javascript:;"><img src="../img/main/sub_banner2.png" alt="img"></a>
+                            <a class="swiper-slide" href="javascript:;"><img src="../img/main/sub_banner3.png" alt="img"></a>
+                        </div>
+                    </div>
                 </div>
 
                 <div class="main__merit">
